--- a/src/FE/src/components/Header/Header.css
+++ b/src/FE/src/components/Header/Header.css
@@ -253,7 +253,8 @@ button {
     position: absolute;
     top: -5px;
     right: -5px;
-    background: red;
+    background: rgb(224, 54, 54);
+    padding-left: 1px;
     height: 20px;
     width: 20px;
     display: flex;
