--- a/src/FE/src/components/pages/MyFlights.css
+++ b/src/FE/src/components/pages/MyFlights.css
@@ -39,7 +39,7 @@ main {
   color: rgb(224, 54, 54);
 }
 
-.myflights-container button > div {
+.myflights-container button>div {
   min-width: 160px;
   display: flex;
   justify-content: center;
@@ -176,8 +176,10 @@ main {
 }
 
 .tab.active {
-  border: 2px solid #f66; /* active border color */
-  color: #f66; /* active text color */
+  border: 2px solid #f66;
+  /* active border color */
+  color: #f66;
+  /* active text color */
 }
 
 .empty-state {
@@ -201,4 +203,97 @@ main {
 
 .myflights-container .fa-solid {
   margin-bottom: 3px;
+}
+
+.myflights-container .ticket-container {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  padding: 20px;
+  background-color: rgb(255, 250, 250);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.myflights-container .ticket {
+  width: 100%;
+  background: white;
+  border-radius: 15px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  transition: all 0.3s ease;
+}
+
+.myflights-container .ticket:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
+}
+
+.myflights-container .ticket-header {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.myflights-container .status {
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.myflights-container .status.unpaid {
+  background-color: rgb(224, 54, 54);
+}
+
+.myflights-container .ticket-details {
+  padding: 15px;
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+.myflights-container .flight-info {
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.myflights-container .time-info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.myflights-container .seat-info {
+  margin: 15px;
+  font-size: 12px;
+  color: gray;
+}
+
+.myflights-container .flight-info h4 {
+  font-size: 16px;
+  font-weight: 600;
+  margin-right: 10px;
+}
+
+.myflights-container .time-info h4 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.myflights-container .price-info h4 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.myflights-container h4 {
+  font-size: 16px;
+  font-weight: 600;
 }
