--- a/src/FE/src/components/admin/pages/advertisements/AdminAdvertisements.module.css
+++ b/src/FE/src/components/admin/pages/advertisements/AdminAdvertisements.module.css
@@ -42,6 +42,7 @@
     justify-content: center;
     cursor: pointer;
     transition: border-color 0.3s;
+    min-height: 350px;
 }
 
 .uploadLabel:hover {
